[package]
name = "bondi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flexi_logger = "0.22"
log = "0.4"

[dependencies.cursive]
version = "0.18"
default-features = false
features = ["crossterm-backend"]